js/src/tests/test262/built-ins/Error/prototype/toString/undefined-props.js
assert
.
sameValue
(
Error
.
prototype
.
toString
.
call
(
{
}
)
'
Error
'
)
;
assert
.
sameValue
(
Error
.
prototype
.
toString
.
call
(
{
message
:
'
42
'
}
)
'
Error
:
42
'
)
;
assert
.
sameValue
(
Error
.
prototype
.
toString
.
call
(
{
name
:
'
24
'
}
)
'
24
'
)
;
assert
.
sameValue
(
Error
.
prototype
.
toString
.
call
(
{
name
:
'
24
'
message
:
'
42
'
}
)
'
24
:
42
'
)
;
reportCompare
(
0
0
)
;
